// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrevButton renders 1`] = `
<button data-cy="ctrl prev" class="btn sapphire-blue playbackCtrl melody-playbackCtrl"
role="button">
  <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
    <path d="M11 18V6l-8.5 6 8.5 6zm.5-6l8.5 6V6l-8.5 6z"></path>
  </svg>
</button>
`;

exports[`PrevButton renders with a disabled class if theres only one track and currentTime is 0 1`] = `
<button data-cy="ctrl prev" class="btn sapphire-blue playbackCtrl melody-playbackCtrl playbackCtrl--disabled"
role="button">
  <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
    <path d="M11 18V6l-8.5 6 8.5 6zm.5-6l8.5 6V6l-8.5 6z"></path>
  </svg>
</button>
`;
